--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -283,8 +283,8 @@
                             <div class="widget widget_getintuch">
                                 <h5 class="footer-title">Contact</h5>
                                 <ul>
-                                    <!-- <li>+088 01912704287</li> -->
-                                    <li>info@stellar-ai.in</li>
+<!--                                     <li>+088 01912704287</li> -->
+                                    <li style="text-transform: lowercase;">info@stellar-ai.in</li>
                                 </ul>
                             </div>
                             <div class="footer-social">
