notification feature updates

--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -1104,9 +1104,7 @@
         <script src="{% static 'chat/js/reconnecting-websocket.js' %}"></script>
         {% include 'chat/group-chat-js.html' %}
         {% include 'chat/chat-js.html' %}
-
-
-
+        {% include 'users/notification_permission.html' %}
     </body>
 
 
