--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -131,7 +131,7 @@
 </div>
     {% endfor %}
     {% endif %}#} -->
-<div class="page-content bg-white">
+<div class="page-content bg-white" style="padding-bottom: 0em;">
     <!-- Slider Banner -->
 
     <div class="dlab-bnr-inr">
