--- a/home/templates/home/terms_and_condition.html
+++ b/home/templates/home/terms_and_condition.html
@@ -11,6 +11,10 @@
                 <h1 class="mt-3">Terms And Condition</h1>
                 {% elif page == "privacy-policy" %}
                 <h1 class="mt-3">Privacy Policy</h1>
+                {% elif page == "refund_policy" %}
+                <h1 class="mt-3">Refund Policy</h1>
+                {% elif page == "cancellation_policy" %}
+                <h1 class="mt-3">Cancellation Policy</h1>
                 {% endif %}
 <!--                <p>We help companies we believe in get results. Let us show you how</p>-->
             </div>
