--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -12,7 +12,7 @@
                 <div class="hero-body">
                     <div class="container">
                         <div class="left-caption">
-                            <h2>Join an Exciting Social Experience.</h2>
+                            <h2>Join an Exciting Soci<span style="color: #FFE162">AI</span>l Experience.</h2>
                         </div>
                     </div>
                 </div>
