--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -11,8 +11,8 @@
             <div class="hero is-fullheight is-login">
                 <div class="hero-body">
                     <div class="container">
-                        <div class="left-caption">
-                            <h2>Join an Exciting Social Experience.</h2>
+                        <div class="left-caption" style="max-width: 420px;">
+                            <h2>Join an Exciting Soci<span style="color: #FFE162">AI</span>l Experience.</h2>
                         </div>
                     </div>
                 </div>
